# aterm

./: AGENT_REORGANIZATION.md  ANALYSIS_SUMMARY.md  ATERM_IMPROVEMENTS.md  DEEP_ANALYSIS_AND_UPGRADES.md  LLAMA_CPP_INTEGRATION.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_STATUS.md  UPGRADE.md  UPGRADES_COMPLETE.md  WORKFLOW_ANALYSIS.md  autoAgentUpgrade01.md  gradle.properties
.github/workflows/: android.yml  release.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
core/main/: build.gradle.kts
core/main/src/androidTest/java/com/qali/aterm/agent/integration/: AgentWorkflowTest.kt  ContextWindowTest.kt  NonStreamingApiTest.kt  ToolChainingTest.kt
core/main/src/main/assets/: init-arch.sh  init-debian.sh  init-kali.sh  init-ubuntu.sh
core/main/src/main/java/com/qali/aterm/: App.kt
core/main/src/main/java/com/qali/aterm/agent/: AgentService.kt  HistoryPersistenceService.kt  MemoryService.kt  SystemInfoService.kt
core/main/src/main/java/com/qali/aterm/agent/client/: AgentClient.kt  AgentEvent.kt  OllamaClient.kt
core/main/src/main/java/com/qali/aterm/agent/client/api/: ApiRequestBuilder.kt  ApiResponseParser.kt  JsonUtils.kt  ProviderAdapter.kt
core/main/src/main/java/com/qali/aterm/agent/client/error/: ErrorClassifier.kt  ErrorTypes.kt
core/main/src/main/java/com/qali/aterm/agent/client/intent/: IntentDetector.kt  IntentType.kt
core/main/src/main/java/com/qali/aterm/agent/client/project/: CommandModels.kt  ProjectStructureExtractor.kt
core/main/src/main/java/com/qali/aterm/agent/core/: Content.kt  Turn.kt
core/main/src/main/java/com/qali/aterm/agent/debug/: BreakpointManager.kt  DebugLogger.kt  ExecutionStateTracker.kt
core/main/src/main/java/com/qali/aterm/agent/ppe/: AllowListManager.kt  CliBasedAgentClient.kt  CodeQualityValidator.kt  ContextWindowManager.kt  ErrorRecoveryManager.kt  IntelligentCache.kt  Observability.kt  ParallelToolExecutor.kt  PpeApiClient.kt  PpeConfig.kt  PpeExecutionEngine.kt  PpeMessageProcessor.kt  PpeScriptLoader.kt  PpeScriptParser.kt  PpeScriptParserEnhanced.kt  PpeTemplateEngine.kt  PpeToolAdapter.kt  ProcessDataAnalyzer.kt  ProgressPersistence.kt  ProjectStartupDetector.kt  ToolApprovalManager.kt
core/main/src/main/java/com/qali/aterm/agent/ppe/models/: PpeControlFlowBlock.kt  PpeInstruction.kt  PpeMessage.kt  PpeScript.kt  PpeTurn.kt
core/main/src/main/java/com/qali/aterm/agent/tools/: ArchitectureAnalysisTool.kt  CodeQualityMetricsTool.kt  CodeReviewTool.kt  CommandExecutionTool.kt  CommandHistoryTool.kt  CoverageAnalysisTool.kt  CustomWebSearchTool.kt  DebugTool.kt  DependencyManagementTool.kt  DocumentAnalysisTool.kt  DocumentationGenerationTool.kt  EditTool.kt  ExecutionTraceTool.kt  FileStructureTool.kt  GlobTool.kt  GrepTool.kt  IntelligentErrorAnalysisTool.kt  InteractiveShellTool.kt  LSTool.kt  LanguageLinterTool.kt  McpTool.kt  MemoryTool.kt  PerformanceProfilingTool.kt  ProjectAnalysisTool.kt  ReadFileTool.kt  ReadManyFilesTool.kt  RipGrepTool.kt  SedTool.kt  ShellTool.kt  SmartEditTool.kt  SyntaxErrorDetectionTool.kt  SyntaxFixTool.kt  TestExecutionTool.kt  ToolRegistry.kt  ToolResult.kt  VariableInspectorTool.kt  WebFetchTool.kt  WebSearchTool.kt  WriteFileTool.kt  WriteTodosTool.kt
core/main/src/main/java/com/qali/aterm/agent/utils/: ActionFlowPlanner.kt  AgentMemory.kt  ApiMismatchLibrary.kt  AtermIgnoreManager.kt  AutoErrorDetection.kt  ChunkAggregator.kt  CodeDependencyAnalyzer.kt  CommandAllowlist.kt  ComprehensiveErrorAnalysis.kt  DependencyCache.kt  DiffUtils.kt  EditFailureMonitor.kt  ErrorDetectionUtils.kt  ErrorMonitor.kt  ErrorPatternLibrary.kt  ErrorUtils.kt  FileCoherenceManager.kt  FuzzyStringMatcher.kt  PatchDiffUtils.kt  PathUtils.kt  ProjectAnalyzer.kt  RequestClassifier.kt  TextUtils.kt
core/main/src/main/java/com/qali/aterm/api/: ApiProvider.kt  ProviderConfig.kt
core/main/src/main/java/com/qali/aterm/autogent/: AutoAgentLearningService.kt  AutoAgentProvider.kt  ClassificationModelManager.kt  CodeBertClassifier.kt  FrameworkKnowledgeBase.kt  LearningDatabase.kt  PromptAnalyzer.kt
core/main/src/main/java/com/qali/aterm/gemini/: GeminiService.kt
core/main/src/main/java/com/qali/aterm/gemini/client/: GeminiClient.kt  MultiProviderAgentClient.kt
core/main/src/main/java/com/qali/aterm/gemini/tools/: EditTool.kt  FileStructureTool.kt  LanguageLinterTool.kt  ReadManyFilesTool.kt  SedTool.kt  ShellTool.kt  SyntaxErrorDetectionTool.kt  SyntaxFixTool.kt
core/main/src/main/java/com/qali/aterm/gemini/utils/: FileCoherenceManager.kt
core/main/src/main/java/com/qali/aterm/llm/: LocalLlamaModel.kt
core/main/src/main/java/com/qali/aterm/service/: SessionService.kt
core/main/src/main/java/com/qali/aterm/ui/activities/terminal/: MainActivity.kt
core/main/src/main/java/com/qali/aterm/ui/theme/: Theme.kt
core/main/src/main/java/com/rk/: AlpineDocumentProvider.kt
core/main/src/main/java/com/rk/settings/: Settings.kt
core/main/src/main/java/com/rk/terminal/gemini/client/: GeminiClient.kt
core/main/src/main/java/com/rk/terminal/service/: SessionService.kt
core/main/src/main/java/com/rk/update/: UpdateManager.kt
core/main/src/main/res/raw/: debug_agent_script.yaml  default_agent_script.yaml  test_agent_script.yaml
core/main/src/main/res/xml/: network_security_config.xml
core/main/src/test/java/com/qali/aterm/agent/client/: AgentClientTest.kt
core/main/src/test/java/com/qali/aterm/agent/debug/: DebugLoggerTest.kt
core/main/src/test/java/com/qali/aterm/agent/ppe/: ContextWindowManagerTest.kt  PpeApiClientTest.kt  PpeExecutionEngineTest.kt
core/main/src/test/java/com/qali/aterm/agent/test/: TestHelpers.kt
core/main/src/test/java/com/qali/aterm/agent/tools/: ToolRegistryTest.kt
core/terminal-emulator/src/main/java/com/termux/terminal/: TerminalBuffer.java  TerminalSession.java
core/terminal-view/src/main/java/com/termux/view/: TerminalRenderer.java  TerminalView.java
core/terminal-view/src/main/java/com/termux/view/textselection/: TextSelectionCursorController.java
(+33 files in other folders)
